* Fri Jul 24 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Back port fixes from 1.7.x, including:
-  Remove 2 argument open(...O_CREAT...) instance in
   grst_admin_file.c
-  Change (GRSTerrorLogFunc) to return int, to allow 
   if-less C macro using && instead.
* Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.12 ====
* Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
- New version for various fixes imported from 1.7.3
- Use lib/lib64 for mod_gridsite.so in Makefile and 
  make-gridsite-spec
- DN list URL encoding bug in grst_gacl.c
- Don't export AURIs with errors
- Add VOMS LSC file support
* Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.11 ====
* Mon Jun 23 2008 Andrew McNab <Andrew.McNab@man.ac.uk>
- Backport changes from 1.7.x for Apache 2.2 and 
  Debian/SL5. 
- Define _LARGEFILE64_SOURCE in mod_gridsite.c and
  gsexec.c if using Apache 2.2
- Rely on GRSTx509ChainLoadCheck() instead of mod_ssl
  checking if using Apache 2.2, as these functions are
  no longer exposed by mod_ssl.
- mod_gridsite_perm_handler now run at hook level
  APR_HOOK_REALLY_LAST to avoid httpd.conf gotchas.
* Mon Jun 23 2008 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.5.9 ====
* Tue Mar 18 2008 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add extern to declaration of GRSTerrorLogFunc in
  gridsite.h (bug #34658 from Luca Petronzio)
* Tue Mar 18 2008 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.5.8 ====
* Fri Nov 9 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- Many changes, including switch to AURI internal
  format for credentials
* Fri Nov 9 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.5.5 ====
* Wed Jun 13 2007 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include ctx->param->flags fix in mod_gridsite for
  OpenSSL 0.9.8 from Bruno Harbulot.
- Restrict export of VOMS attributes to ones present
  in the last proxy of the chain to contain attributes